lab7/abc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dateapi
spec:
  hosts:
  - "*"
  gateways:
  - mygateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: dateapi
        subset: v2
        port:
          number: 8080
