lab7/dateapi-vs-forwardv1.yaml
  
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dateapi-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - mygateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: dateapi
        port:
          number: 8080
    fault:
      abort:
        percentage:
          value: 50
        httpStatus: 400
